--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -57,24 +57,24 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
 custom_proxy_group=🚀 手动切换①`select`.*
 custom_proxy_group=🚀 手动切换②`select`.*
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
-custom_proxy_group=🏰 Disney+`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=🏰 Disney+`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=🎮 Epic游戏`select`[]DIRECT`[]🎮 游戏专线①`[]🎮 游戏专线②`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=🎮 蒸汽动力`select`[]DIRECT`[]🎮 游戏专线①`[]🎮 游戏专线②`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🎮 游戏专线①`[]🎮 游戏专线②`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=🎮 Epic游戏`select`[]DIRECT`[]🎮 香港专线`[]🎮 狮城专线`[]🎮 日本专线`[]🎮 韩国专线`[]🎮 美国专线`[]🚀 节点选择`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=🎮 蒸汽动力`select`[]DIRECT`[]🎮 香港专线`[]🎮 狮城专线`[]🎮 日本专线`[]🎮 韩国专线`[]🎮 美国专线`[]🚀 节点选择`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🎮 香港专线`[]🎮 狮城专线`[]🎮 日本专线`[]🎮 韩国专线`[]🎮 美国专线`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🎮 港服游戏`select`[]DIRECT`[]🎮 香港专线`[]🎮 狮城专线`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🎮 台服游戏`select`[]DIRECT`[]🎮 香港专线`[]🎮 狮城专线`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🎮 狮服游戏`select`[]DIRECT`[]🎮 狮城专线`[]🎮 香港专线`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🚀 手动切换①`[]🚀 手动切换②
@@ -83,18 +83,18 @@ custom_proxy_group=🎮 韩服游戏`select`[]DIRECT`[]🎮 韩国专线`[]🎮 
 custom_proxy_group=🎮 美服游戏`select`[]DIRECT`[]🎮 美国专线`[]🎮 狮城专线`[]🇺🇸 美国节点`[]🇸🇬 狮城节点`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🌸 日本站点`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🗽 美国站点`select`[]🇺🇸 美国节点`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②
-custom_proxy_group=🌐 其他站点`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
+custom_proxy_group=🌐 其他站点`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
 custom_proxy_group=🌐 访问机场`select`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]DIRECT
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🎮 游戏专线①`[]🎮 游戏专线②`[]🚀 手动切换①`[]🚀 手动切换②
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换①`[]🚀 手动切换②
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|HongKong|Hong Kong)
 custom_proxy_group=🇹🇼 台湾节点`select`(台|新北|彰化|TW|Taiwan)
+custom_proxy_group=🇸🇬 狮城节点`select`(新|坡|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|广日|JP|Japan)
 custom_proxy_group=🇰🇷 韩国节点`select`(韩|韓|首尔|KR|KOR|Korea)
-custom_proxy_group=🇸🇬 狮城节点`select`(新|坡|狮城|SG|Singapore)
 custom_proxy_group=🇺🇸 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🇬🇧 英国节点`select`(英|UK|United Kingdom)
 custom_proxy_group=🇦🇺 澳洲节点`select`(澳|AU|AUS|Australia)
