--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -23,7 +23,8 @@ ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/ma
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🎮 Epic平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 蒸汽平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
@@ -62,7 +63,7 @@ custom_proxy_group=🚀 手动切换①`select`.*
 custom_proxy_group=🚀 手动切换②`select`.*
 custom_proxy_group=🚀 手动切换③`select`.*
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
-custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=🏰 Disney+`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
