--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -57,7 +57,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇷🇺 俄国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=🚀 手动切换①`select`.*
 custom_proxy_group=🚀 手动切换②`select`.*
 custom_proxy_group=🚀 手动切换③`select`.*
